--- a/packages/react-elements/package.json
+++ b/packages/react-elements/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "react-elements",
-  "version": "0.0.0",
+  "name": "anothertestorg",
+  "version": "3.0.1",
   "type": "module",
-  "private": false,
   "main": "dist/index.js",
   "files": [
     "dist"
