--- a/lerna.json
+++ b/lerna.json
@@ -1,4 +1,7 @@
 {
-  "version": "1.0.0",
-  "packages": ["packages/*", "playground/*"]
+  "version": "2.0.0",
+  "packages": [
+    "packages/*",
+    "playground/*"
+  ]
 }
