--- a/packages/react-elements/package.json
+++ b/packages/react-elements/package.json
@@ -15,6 +15,7 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "jest",
+    "test:w": "jest --watchAll",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
