package name change

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "lerna run build",
     "test": "lerna run test",
-    "lerna:publish": "lerna publish --no-private"
+    "publish": "lerna publish --no-private"
   },
   "author": "",
   "license": "ISC",
