--- a/packages/react-elements/package.json
+++ b/packages/react-elements/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "anothertestorg",
+  "name": "@anothertestorg/test",
   "version": "3.1.0",
   "type": "module",
   "main": "dist/index.js",
